# csad2526ki405vladyslavvoroniak5

./: .gitignore  CMakeLists.txt  README.md  copilot_history.txt  copilot_history2.txt  copilot_history3.txt  copilot_history4.txt  copilot_history5.txt  main.cpp  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
scripts/: build_hello.sh  ci-windows.bat  ci.sh  rebuild.sh
tests/: unit_tests.cpp
